<resources>
    <string name="app_name">English for IT</string>
    <string name="user">Email ;</string>
    <string name="password">Password ;</string>
    <string name="name">Name ;</string>
    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
    <string name="stringEndLine">\n\n\n</string>
    <string name="command1">Production and Wrap-Up</string>
    <string name="command2"><b>Direction:</b> Study the test again and then summarize into infographic.</string>
    <string name="u1styleText1">Unit 1</string>
    <string name="u1styleText2">Computer Users</string>
    <string name="u1styleText3">Objective</string>
    <string name="u1styleText4">At the end of this unit, students are able to describe the components of a computer.</string>
    <string name="u1styleText5">Warm-up</string>
    <string name="u1styleText6">1. What is a computer?</string>
    <string name="u1styleText7">A computer is an electronic device, operating under the control of instruction stored in its own memory, that can accept data, process the data according to specified rules, produce results, and store the results for the future use.</string>
    <string name="u1styleText8">2. How do you use computers in your free time?</string>
    <string name="u1styleText9">Rearrange the important by typing 1&#45;3.</string>
    <string name="u1styleText10">3. What are the components of a computer?</string>
    <string name="u1styleText11">Hint:</string>
    <string name="u1styleText12">Example: D[ ]sp[ ]ay monitor</string>
    <string name="u1styleText13">Type: Display</string>
    <string name="u1styleText14">1) I[ ]p[ ]t devices</string>
    <string name="u1styleText15">2) O[ ][ ]p[ ]t devices</string>
    <string name="u1styleText16">3) S[ ][ ]t[ ][ ] unit</string>
    <string name="u1styleText17">4) St[ ][ ][ ][ ]e devices</string>
    <string name="u1styleText18">5) Com[ ][ ]ni[ ][ ]ti[ ][ ] devices</string>
    <string name="u1styleText19">Presentation</string>
    <string name="u1styleText20">What is a computer?</string>
    <string name="u1styleText21">A computer is an electronic machine which can accept data in a certain form, process the data, and give the results of the processing in a specified format as information.</string>
    <string name="u1styleText22">First, data is fed into the computer’s memory. Then when the program is run, the computer performs a set of instructions and processes the data. Finally, we can see the results (the output) on the screen or in printed form (see Fig below)</string>
    <string name="u1styleText23">A computer system consists of two parts: hardware and software.</string>
    <string name="u1styleText24"><b>Hardware</b> is any electronic or mechanical part you can see or touch.</string>
    <string name="u1styleText25"><b>Software</b> is a set of instructions, called a program, which tells the computer what to do.</string>
    <string name="u1styleText26"><b>Software</b> There are three basic hardware sections: <b>the central processing unit ( CPU)</b>, <b>main memory</b> and <b>peripherals</b>. Perhaps the most influential component is the central processing unit. Its function is to program instructions and coordinate the activities of all the other units. I a way, it is the “brain off the computer. The main memory ( a collection of RAM chips) holds the instructions and data which are being processed by the CPU. Peripherals are the physical units attracted to the computer. The include storage devices and input/ output devices.</string>
    <string name="u1styleText27">The components of a computer</string>
    <string name="u1styleText28">are Input devices, Output devices, System unit, Storage devices and Communication devices.</string>
    <string name="u1styleText29">Input</string>
    <string name="u1styleText30">is any data and instruction entered into the memory of a computer. As shown in Figure below, people have a variety of options for entering data and instructions into a computer.</string>
    <string name="u1styleText31">Output Devices</string>
    <string name="u1styleText32">An output device is any hardware component that conveys information to one or more people. Three commonly used output devices are a printer, a monitor and speakers.</string>
    <string name="u1styleText33">A printer produces text and graphics on a physical medium such as paper. A monitor displays text, graphics, and videos on a screen. Speakers allow you to hear music, voice and other audio (sounds)</string>
    <string name="u1styleText34">System Unit</string>
    <string name="u1styleText35">The system unit is a cast that contains the electronic components of the computer that are used to process data. The circuitry of the system unit usually is part of or is connected to a circuit board called the motherboard.</string>
    <string name="u1styleText36">Two main components on the motherboard are the processor and memory: The process also called a CPU ( central processing unit) , is the electronic component that interprets and carries out the basic instructions that operate the computer. Memory consisted of electronic component, most memory keeps data and instructions temporarily, which means its contents are erased when the computer is shut off.)</string>
    <string name="u1styleText37">Storage Devices</string>
    <string name="u1styleText38">Storage holds data, instructions, and information for future use. For example, computers can store hundred or millions of customer names and address. Storage holds these items permanently.</string>
    <string name="u1styleText39">A computer keeps data, instructions, and information on storage media. Examples of storage media are USB flash drives, hard disks, optical discs, and memory cards. A storage device records (writes( and / or retrieves (reads) items to and from storage media. Drives and readers/ writers, which are ty0es of storage devices.</string>
    <string name="u1styleText40">Communication devices</string>
    <string name="u1styleText41">A communication device is a hardware component that enables a computer to sent (transmit) and receive data, instructions, and information to and from one or more computers or mobile devices. A widely used communications device is a modern.</string>
    <string name="u1styleText42">Communications occur over cables, telephone lines, cellular radio networks, satellites and other transmission media. Some transmission media such as satellites and cellular radio networks, are wireless, which means they have no physical lines or wires.</string>
    <string name="u1styleText43">1. What are the components of a computer?</string>
    <string name="u1styleText44">2. What does CPU stand for?</string>
    <string name="u1styleText45">a. Central Processing Unity</string>
    <string name="u1styleText46">b. Central Processing United</string>
    <string name="u1styleText47">c. Central Processing Unit</string>
    <string name="u1styleText48">d. Central Programming Unit</string>
    <string name="u1styleText49">Match these words (1&#45;9) with the correct meanings (a&#45;d)</string>
    <string name="u1styleText50">1. software</string>
    <string name="u1styleText51">2. peripherals</string>
    <string name="u1styleText52">3. main memory</string>
    <string name="u1styleText53">4. hard drive (also known as hard disk)</string>
    <string name="u1styleText54">5. Hardware</string>
    <string name="u1styleText55">6. Ports</string>
    <string name="u1styleText56">7. Output</string>
    <string name="u1styleText57">8. Central processing unit (CPU)</string>
    <string name="u1styleText58">3. Match the names of digital devices with the pictures.</string>
    <string name="u1styleText59">4. Read the sentences and choose true or false</string>
    <string name="u1styleText60">1. A keyboard is an output device.</string>
    <string name="u1styleText61">2. Touch screen is an input device.</string>
    <string name="u1styleText62">3. A printer is an output device.</string>
    <string name="u1styleText63">4. An external hard disk is a storage device.</string>
    <string name="u1styleText64">5. A memorycards are a storage device.</string>
    <string name="u1styleText66">True</string>
    <string name="u1styleText67">False</string>
    <string name="u1styleText68">Listening</string>
    <string name="postUnit4styleText1">Post-test</string>
    <string name="postUnit4styleText5">3. The internet (often called simply \'the net\') is a global …………………………….of interconnected computers.</string>
    <string name="postUnit4styleText10">1. ADSL* is more commonly known as ……………………………………</string>
    <string name="postUnit4styleText15">10. Before you can connect to the internet for the first time, you have to …………………………………… an account with an ISP.</string>
    <string name="postUnit4styleText20">9. Looking at web pages can be called \"navigating the Web\" but is more commonly called ………………………….</string>
    <string name="postUnit4styleText25">2. Which can keep a public diary of your journey through South America?</string>
    <string name="postUnit4styleText30">8. If you want to find out about the First World War, where should you find it?</string>
    <string name="postUnit4styleText35">4. If you want to exchange messages in real time with friends or colleagues, which the Internet features should you use?</string>
    <string name="postUnit4styleText42">5. Exchange messages in real time about anything you like with strangers.</string>
    <string name="postUnit4styleText43">6. Exchange information and messages about saving a local wood from development with anybody who wants to join in.</string>
    <string name="postUnit4styleText44">7. Post / download photos, video clips and messages among a group of friends.</string>
    <string name="preUnit4styleText2">Unit4</string>
    <string name="preUnit4styleText3">The Internet</string>
    <string name="preUnit4styleText4">Choose the best answer.</string>
    <string name="preUnit4styleText6">a. net</string>
    <string name="preUnit4styleText7">b. network</string>
    <string name="preUnit4styleText8">c. warming</string>
    <string name="preUnit4styleText9">d. Presenting</string>
    <string name="preUnit4styleText11">a. longband</string>
    <string name="preUnit4styleText12">b. broadband</string>
    <string name="preUnit4styleText13">c. wideband</string>
    <string name="preUnit4styleText14">d. webband</string>
    <string name="preUnit4styleText16">a. set</string>
    <string name="preUnit4styleText17">b. set up</string>
    <string name="preUnit4styleText18">c. set in</string>
    <string name="preUnit4styleText19">d. set out</string>
    <string name="preUnit4styleText21">a. \"surfing the net\"</string>
    <string name="preUnit4styleText22">b. \"skiing the net\"</string>
    <string name="preUnit4styleText23">c. \"swimming the net\"</string>
    <string name="preUnit4styleText24">d. \"searching the net\"</string>
    <string name="preUnit4styleText26">a. Blog</string>
    <string name="preUnit4styleText27">b. Webmail</string>
    <string name="preUnit4styleText28">c. Online radio</string>
    <string name="preUnit4styleText29">d. Portal</string>
    <string name="preUnit4styleText31">a. instant massaging</string>
    <string name="preUnit4styleText32">b. online encyclopedia</string>
    <string name="preUnit4styleText33">c. portal</string>
    <string name="preUnit4styleText34">d. chatroom</string>
    <string name="preUnit4styleText36">a. currency converter</string>
    <string name="preUnit4styleText37">b. instant messaging</string>
    <string name="preUnit4styleText38">c. online casino</string>
    <string name="preUnit4styleText39">d. Blog</string>
    <string name="preUnit4styleText40">Match these activities with the Internet features. (8-10)</string>
    <string name="preUnit4styleText41">\ta. Newsgroup \t\t\t\tb. forum\n\tc. discussing group\n\td. Bulletin board/ noticeboard\n\te. chat room</string>
</resources>